# Texus

./: .editorconfig  .gitignore  CONTRIBUTING.md  LICENSE  README.md  README_ZH.md  pyproject.toml  start.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
data/: PUB.json  PUB_TIME.json
docs/: README.md  api.md  contributing.md  getting-started.md  quick-start.md  tutorial.md  user-guide.md
src/: app.py  util.py
src/Common/: __init__.py  base.py  executor.py  logger.py  types.py  util.py
src/Database/: README.md  __init__.py  api.py  backup.py  database.py  table.py  test_cases.py
src/Database/backups/: db_backup_20251008_194341.bak  db_backup_20251008_194441.bak  db_backup_20251008_194541.bak  db_backup_20251008_194641.bak  db_backup_20251008_194844.bak  db_backup_20251008_194944.bak  db_backup_20251008_195044.bak  db_backup_20251008_195144.bak  db_backup_20251008_195340.bak  db_backup_20251008_195440.bak
src/Express/: README.md  __init__.py  menu.py  note.py  raw.html  text.py
src/Express/menu/: README.md  index.html  package.json  vite.config.js
src/Express/monaco/: package-lock.json
src/Express/note/: index.html  package-lock.json
src/Express/raw/: index.html  (+3 more)
src/Port/: Auth.py  Directory.py  Exec.py  Gen.py  GenNote.py  Menu.py  Meta.py  Note.py  README.md  Text.py  Timer.py  __init__.py  raw.py
src/protocol/: __init__.py  types.py
src/scripts/: setup.sh  start.sh  stop.sh
src/server/: README.MD  assets_support.py  determine.py  funcs.py  main.py  translate.py
(+12 files in other folders)
